--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div class="container">
-        <h2>Máy tính Biến đổi Cosine Rời rạc (DCT)</h2>
+        <h2>Máy tính DCT & Lượng Tử Hóa</h2>
         <label for="matrixRows">Số hàng:</label>
         <input type="number" id="matrixRows" min="1" max="10" value="4">
         <label for="matrixCols">Số cột:</label>
         <input type="number" id="matrixCols" min="1" max="10" value="4">
         <button id="generateMatrix">Tạo ma trận</button>
         <div id="matrixInput"></div>
-        <button id="computeDCT1D" style="display:none;">Tính DCT 1D</button>
         <button id="computeDCT2D" style="display:none;">Tính DCT 2D</button>
+        <button id="computeQuantization" style="display:none;">Lượng tử hóa</button>
+        <button id="computeInverseQuantization" style="display:none;">Nghịch lượng tử hóa</button>
         <h3>Kết quả:</h3>
         <div id="matrixResult"></div>
     </div>
