--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="matrixInput"></div>
         <button id="computeDCT2D" style="display:none;">Tính DCT 2D</button>
         <button id="computeQuantization" style="display:none;">Lượng tử hóa</button>
-        <button id="computeInverseQuantization" style="display:none;">Nghịch lượng tử hóa</button>
+        <button id="computeInverseQuantization" style="display:none;">Nghịch lượng tử hóa (Trọng số)</button>
         <h3>Kết quả:</h3>
         <div id="matrixResult"></div>
     </div>
